mensaje automatico generado para el sql.rev209

--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
@@ -115,16 +115,26 @@ var loaderPath= "";
 		                                   }); 
 	                                    </script>
 	                                    <td>
-			                                [% PERL %]
-			                                    print C4::AR::Filtros::to_Icon(  
-			                                                                        boton   => "icon_cancelar",
-			                                                                        onClick => "eliminarEsquemaRow('[% detalle.id %]');",
-			                                                                        title   => "[% 'Eliminar' | i18n %]",
-			                                                                        alternClass => "botonCentradoTabla",
-			                                                                        elem => 'span',
-			                                                                        style => 'float: left;',
-			                                            ) ;
-			                                [% END %]
+                                            [% PERL %]
+                                                print C4::AR::Filtros::to_Icon(  
+                                                                                    boton   => "icon_cancelar",
+                                                                                    onClick => "eliminarEsquemaRow('[% detalle.id %]');",
+                                                                                    title   => "[% 'Eliminar' | i18n %]",
+                                                                                    alternClass => "botonCentradoTabla",
+                                                                                    elem => 'span',
+                                                                                    style => 'float: left;',
+                                                        ) ;
+                                            [% END %]
+                                            [% PERL %]
+                                                print C4::AR::Filtros::to_Icon(  
+                                                                                    boton   => "icon_agregar",
+                                                                                    onClick => "agregarCampoAEsquema('[% detalle.id %]');",
+                                                                                    title   => "[% 'Agregar campo' | i18n %]",
+                                                                                    alternClass => "botonCentradoTabla",
+                                                                                    elem => 'span',
+                                                                                    style => 'float: left;',
+                                                        ) ;
+                                            [% END %]
 			                            </td>
 	                                    
 		                              </tr>
