terminado de ABM de Esquemas #3596 - adicion de workers.js para operaciones costosas en background

--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
@@ -93,53 +93,53 @@ var loaderPath= "";
 		                    <tbody>
 		                            [% FOREACH detalle IN esquema %]
 										<script>var esquema = [% detalle.id %]</script>	                              
-										<tr>
-	                                    <td class="editable" id="[% detalle.id %]___co">[% detalle.getCampoOrigen %]</td>
-                                        <td class="editable" id="[% detalle.id %]___sco">[% detalle.getSubcampoOrigen %]</td>
-                                        <td class="" id="[% detalle.id %]___destino">[% detalle.getDestino %]</td>
-
-	                                    <td class="editable_hover editable_select" id="[% detalle.id %]___ign">[% detalle.getIgnorarFront %]</td>
-	                                    <script>
-		                                    $('.editable_select').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
-		                                        data   : " {'[% 'No' | i18n %]':'[% 'No' | i18n %]','[% 'Si' | i18n %]':'[% 'Si' | i18n %]','selected':'[% 'detalle.getIgnorarFront' %]'}",
-		                                        type      : 'select',
-		                                        submit    : 'OK',
-		                                        style   : 'display: inline',
-		                                        submitdata : {token: "[% token %]", edit: '1'},
-		                                        indicator : loaderPath,
-		
-		                                   }); 
-	                                    </script>
-	                                    <td>
-                                            [% PERL %]
-                                                print C4::AR::Filtros::to_Icon(  
-                                                                                    boton   => "icon_cancelar",
-                                                                                    onClick => "eliminarEsquemaRow('[% detalle.id %]');",
-                                                                                    title   => "[% 'Eliminar' | i18n %]",
-                                                                                    alternClass => "botonCentradoTabla",
-                                                                                    elem => 'span',
-                                                                                    style => 'float: left;',
-                                                        ) ;
-                                            [% END %]
-				                            [% PERL %]
-				                                print C4::AR::Filtros::to_Icon( text    => "[% 'Editar Orden' | i18n %]",
-				                                                                onClick => "editarOrdenEsquema('[% detalle.id %]')",
-				                                                                boton   => "icon_edicion",
-				                                                                title   => "[% 'Editar Orden' | i18n %]",
-				                                                                
-				                                                            );
-				                            [% END %]
-                                            [% PERL %]
-                                                print C4::AR::Filtros::to_Icon(  
-                                                                                    boton   => "icon_agregar",
-                                                                                    onClick => "agregarCampoAEsquema('[% detalle.id %]');",
-                                                                                    title   => "[% 'Agregar campo' | i18n %]",
-                                                                                    alternClass => "botonCentradoTabla",
-                                                                                    elem => 'span',
-                                                                                    style => 'float: left;',
-                                                        ) ;
-                                            [% END %]
-			                            </td>
+										<tr id="esquema_[% detalle.id %]">
+		                                    <td class="editable" id="[% detalle.id %]___co">[% detalle.getCampoOrigen %]</td>
+	                                        <td class="editable" id="[% detalle.id %]___sco">[% detalle.getSubcampoOrigen %]</td>
+	                                        <td class="" id="[% detalle.id %]___destino">[% detalle.getDestino %]</td>
+	
+		                                    <td class="editable_hover editable_select" id="[% detalle.id %]___ign">[% detalle.getIgnorarFront %]</td>
+		                                    <script>
+			                                    $('.editable_select').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
+			                                        data   : " {'[% 'No' | i18n %]':'[% 'No' | i18n %]','[% 'Si' | i18n %]':'[% 'Si' | i18n %]','selected':'[% 'detalle.getIgnorarFront' %]'}",
+			                                        type      : 'select',
+			                                        submit    : 'OK',
+			                                        style   : 'display: inline',
+			                                        submitdata : {token: "[% token %]", edit: '1'},
+			                                        indicator : loaderPath,
+			
+			                                   }); 
+		                                    </script>
+		                                    <td>
+	                                            [% PERL %]
+	                                                print C4::AR::Filtros::to_Icon(  
+	                                                                                    boton   => "icon_cancelar",
+	                                                                                    onClick => "eliminarEsquemaRow('[% detalle.id %]');",
+	                                                                                    title   => "[% 'Eliminar' | i18n %]",
+	                                                                                    alternClass => "botonCentradoTabla",
+	                                                                                    elem => 'span',
+	                                                                                    style => 'float: left;',
+	                                                        ) ;
+	                                            [% END %]
+					                            [% PERL %]
+					                                print C4::AR::Filtros::to_Icon( text    => "[% 'Editar Orden' | i18n %]",
+					                                                                onClick => "editarOrdenEsquema('[% detalle.id %]')",
+					                                                                boton   => "icon_edicion",
+					                                                                title   => "[% 'Editar Orden' | i18n %]",
+					                                                                
+					                                                            );
+					                            [% END %]
+	                                            [% PERL %]
+	                                                print C4::AR::Filtros::to_Icon(  
+	                                                                                    boton   => "icon_agregar",
+	                                                                                    onClick => "agregarCampoAEsquema('[% detalle.id %]');",
+	                                                                                    title   => "[% 'Agregar campo' | i18n %]",
+	                                                                                    alternClass => "botonCentradoTabla",
+	                                                                                    elem => 'span',
+	                                                                                    style => 'float: left;',
+	                                                        ) ;
+	                                            [% END %]
+				                            </td>
 	                                    
 		                              </tr>
 		                            [% END %]
