--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/lista_registros_importacion.tmpl
@@ -5,9 +5,20 @@
     });
 
 </script>
-<div class="contenedor_paginador">[% paginador %]</div>
+
 <fieldset class="resultados_busqueda">
     <legend class="titulo_legend trigger click">[% "Registros de la Importaci&oacute;n:" | i18n %]</legend>
+
+<fieldset class="resultados_busqueda">
+    <legend class="titulo_legend trigger click">[% "Filtrar" | i18n %]</legend>
+        <div >
+            <input type="radio" name="record_filter" value="MAIN" [% IF record_filter == 'MAIN' or !record_filter %] checked [% END %]onChange="detalleImportacion([% id_importacion %]);">Registros Principales
+            <input type="radio" name="record_filter" value="ALL" [% IF record_filter == 'ALL' %] checked [% END %] onChange="detalleImportacion([% id_importacion %]);">Todos
+            <input type="radio" name="record_filter" value="UNIDENTIFIED" [% IF record_filter == 'UNIDENTIFIED' %] checked [% END %] onChange="detalleImportacion([% id_importacion %]);">Registros Sin Identificar
+        </div>
+</fieldset>
+
+        <div class="contenedor_paginador">[% paginador %]</div>
         <div class="datos_tabla_div_importacion">
             <div class="resultados_consulta">[% "La cantidad de registros es" | i18n %]: [% cantidad %]</div>
             <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0 width=100%>
@@ -23,7 +34,7 @@
                             [% "Identificaci&oacute;n" | i18n %]
                         </th>
                         <th>
-                            [% "Cantidad de Ejemplares" | i18n %]
+                            [% "Tipo" | i18n %]
                         </th>
                         <th>
                             [% "Acciones" | i18n %]
@@ -36,16 +47,17 @@
                 <tr  align="center">
 
                       <td align="left">
-                          [% detalle_importacion.getTitulo %]
+                            [% detalle_importacion.getTitulo %]
                       </td>
                       <td align="left">
-                           [% detalle_importacion.getAutor %]
+                            [% detalle_importacion.getTitulo %]
                       </td>
                       <td align="left">
                            [% detalle_importacion.getIdentificacion %]
                       </td>
                       <td align="left">
-                           [% detalle_importacion.getCantidadDeEjemplares %]
+                           [% detalle_importacion.getTipo %]
+                          [% IF detalle_importacion.getTipo == "Registro" %] ([% detalle_importacion.getCantidadDeEjemplares %] ej.)[% END %]
                       </td>
                       <!--  BOTONES ACCIONES (Editar, Borrar, Ver detalle) -->
                       <td align='left' width="9%" >
