--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/importaciones.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/importaciones.tmpl
@@ -5,6 +5,7 @@
 <script type="text/javascript">
  $(document).ready(function() {
        onEnter("nombre_proveedor",consultar);
+       consultar('TODOS');
  });
 </script>
 <fieldset>
