Varios cambios de UI

--- a/intranet/htdocs/intranet-tmpl/form_reporte_gen.tmpl
+++ b/intranet/htdocs/intranet-tmpl/form_reporte_gen.tmpl
@@ -1,15 +1,8 @@
 [% INCLUDE 'intranet-top.inc' %] 
-[% INCLUDE 'AutocompleteHelper.inc' %]
+[% INCLUDE 'BootstrapToolkit.inc' %]
 
 [% USE HTML %]
 
-<link rel="stylesheet" href="/includes/bootstrap/bootstrap.min.css">
-<script src="/includes/bootstrap/js/bootstrap-tabs.js"></script>
-<script src="/includes/bootstrap/js/bootstrap-alerts.js"></script>
-<script src="/includes/bootstrap/js/bootstrap-modal.js"></script>
-<script src="/includes/bootstrap/js/bootstrap-twipsy.js"></script>
-<script src="/includes/bootstrap/js/bootstrap-buttons.js"></script>
-<script src="/includes/bootstrap/js/bootstrap-scrollspy.js"></script>
 
 <script>
 
@@ -30,8 +23,8 @@
  
 <div class="pill-content">
   <div class="active" id="home">[% INCLUDE 'partials/reportes/_demo_toolkit.inc' %]</div>
-  <div id="profile">[% INCLUDE 'partials/reportes/_reporte_usuarios.inc' %] </div>
-  <div id="form_demo">[% INCLUDE 'partials/reportes/_form_demo.inc' %]</div>
+  <div id="profile">            [% INCLUDE 'partials/reportes/_reporte_usuarios.inc' %] </div>
+  <div id="form_demo">          [% INCLUDE 'partials/reportes/_form_demo.inc' %]</div>
   <div id="settings">Settings</div>
 </div>
 
