--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/detalle_esquema.tmpl
@@ -2,11 +2,10 @@
 <script src="/includes/jquery/jquery.jeditable.js"></script>
 <script src="/intranet-tmpl/includes/visualizacionINTRA-min.js"></script>
 <script type="text/javascript">
-var loaderPath= "";
+      var loaderPath= "";
       $(document).ready(function() {
         loaderPath = '<img src="'+imagesForJS+'/loaders/loader_facebook.gif"'+'>'
         makeDataTable('#tablaResult');
-        zebraId('tablaResult');
         loaderPath = '<img src="'+imagesForJS+'/loaders/loader_facebook.gif"'+'>';
         $('.editable').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
               type      : 'text',
@@ -17,7 +16,9 @@ var loaderPath= "";
               indicator : loaderPath,
 
         });
-       
+
+        $('.tabs').tabs();
+
       });
 </script>
 
@@ -75,88 +76,18 @@ var loaderPath= "";
 	        <div class="mensajes_informacion" style="clear:both;"> [% table_error_message_esquema %] </div>
 	    </fieldset>
 	</div>
-	
-	<div id="tabla_referencia">
-	    <fieldset class="resultados_busqueda">
-	        <legend class="titulo_legend trigger">[% "Detalle del esquema " | i18n %] [% esquema_title %]</legend>
-		            <div class="datos_tabla_div" id="datos_tabla_div">
-		                <table id="tablaResult" class="datos_tabla" border=0 cellspacing=0 cellpadding=0>
-		                    <thead>
-		                        <tr class="titulo_tabla_resultado">
-	                                <th class="click"> [% 'Campo origen' | i18n %]</th>
-	                                <th class="click"> [% 'SubCampo origen' | i18n %]</th>
-	                                <th class="click"> [% 'Destino' | i18n %]</th>
-	                                <th class="click"> [% 'Ignorar' | i18n %]</th>
-	                                <th class="click"> [% 'Eliminar' | i18n %]</th>
-		                        </tr>
-		                    </thead>
-		                    <tbody>
-		                            [% FOREACH detalle IN esquema %]
-										<script>var esquema = [% detalle.id %]</script>	                              
-										<tr id="esquema_[% detalle.id %]">
-		                                    <td class="editable" id="[% detalle.id %]___co">[% detalle.getCampoOrigen %]</td>
-	                                        <td class="editable" id="[% detalle.id %]___sco">[% detalle.getSubcampoOrigen %]</td>
-	                                        <td class="" id="[% detalle.id %]___destino">[% detalle.getDestino %]</td>
-	
-		                                    <td class="editable_hover editable_select" id="[% detalle.id %]___ign">[% detalle.getIgnorarFront %]</td>
-		                                    <script>
-			                                    $('.editable_select').editable('[% url_prefix %]/herramientas/importacion/esquemas_importacionDB.pl', { 
-			                                        data   : " {'[% 'No' | i18n %]':'[% 'No' | i18n %]','[% 'Si' | i18n %]':'[% 'Si' | i18n %]','selected':'[% 'detalle.getIgnorarFront' %]'}",
-			                                        type      : 'select',
-			                                        submit    : 'OK',
-			                                        style   : 'display: inline',
-			                                        submitdata : {token: "[% token %]", edit: '1'},
-			                                        indicator : loaderPath,
-			
-			                                   }); 
-		                                    </script>
-		                                    <td>
-	                                            [% PERL %]
-	                                                print C4::AR::Filtros::to_Icon(  
-	                                                                                    boton   => "icon_cancelar",
-	                                                                                    onClick => "eliminarEsquemaRow('[% detalle.id %]');",
-	                                                                                    title   => "[% 'Eliminar' | i18n %]",
-	                                                                                    alternClass => "botonCentradoTabla",
-	                                                                                    elem => 'span',
-	                                                                                    style => 'float: left;',
-	                                                        ) ;
-	                                            [% END %]
-					                            [% PERL %]
-					                                print C4::AR::Filtros::to_Icon( text    => "[% 'Editar Orden' | i18n %]",
-					                                                                onClick => "editarOrdenEsquema('[% detalle.id %]')",
-					                                                                boton   => "icon_edicion",
-					                                                                title   => "[% 'Editar Orden' | i18n %]",
-					                                                                
-					                                                            );
-					                            [% END %]
-	                                            [% PERL %]
-	                                                print C4::AR::Filtros::to_Icon(  
-	                                                                                    boton   => "icon_agregar",
-	                                                                                    onClick => "agregarCampoAEsquema('[% detalle.id %]');",
-	                                                                                    title   => "[% 'Agregar campo' | i18n %]",
-	                                                                                    alternClass => "botonCentradoTabla",
-	                                                                                    elem => 'span',
-	                                                                                    style => 'float: left;',
-	                                                        ) ;
-	                                            [% END %]
-				                            </td>
-	                                    
-		                              </tr>
-		                            [% END %]
-		                    </tbody>
-		                </table>
-		            </div>
-	                [% PERL %]
-	                       print C4::AR::Filtros::to_Button(   text    => "[% 'Agregar campo' | i18n %]",
-	                                                           boton   => "boton_agregar",
-	                                                           onClick => "agregarCampo([% id_esquema %]);",
-	                                                           title   => "[% 'Agregar campo' | i18n %]",
-	                               ) ;
-	                [% END %]
-	        <div class="mensajes_informacion" style="clear:both;"> [% table_error_message %] </div>
-	    </fieldset>
+
+
+	<ul class="tabs">
+	  <li class="active"><a href="#split_campos">[% 'Separaci&oacute;n de Campos' | i18n %]</a></li>
+	  <li><a href="#join_campos">[% 'Uni&oacute;n de Campos' | i18n %]</a></li>
+	</ul>
+	 
+	<div class="pill-content">
+	  <div class="active" id="split_campos">[% INCLUDE 'herramientas/importacion/_detalle_esquema.inc' %]</div>
+	  <div id="join_campos"></div>
 	</div>
-    <div id="add_campo_esquema_result"></div>
-    <div id="tablaResultSubCampos"></div>
+	
+
 [% END %]
 
