--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/esquemas_importacion.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/esquemas_importacion.tmpl
@@ -1,8 +1,5 @@
 [% INCLUDE "intranet-top.inc" %]
-
-[% INCLUDE  'WindowHelper.inc'  %]
-
-[% INCLUDE  'AutocompleteHelper.inc'  %] 
+[% INCLUDE 'BootstrapToolkit.inc' %]
 
 <script type="text/javascript" src="/includes/jquery/jquery-ui-1.8.13.sortable.min.js"></script>
 <script type="text/javascript" src="/intranet-tmpl/herramientas/esquemas_importacion.js"></script>
