--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/orden_esquema_campos.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/orden_esquema_campos.tmpl
@@ -28,7 +28,7 @@
 </script>
 <fieldset>
     <legend class="titulo_legend trigger click"><strong>[% "Campos destino para " | i18n %][% esquema_padre.getCampoOrigen %]$<span style="text-transform: lowercase;">[% esquema_padre.getSubcampoOrigen %]</span></strong></legend>
-      <table id="tabla_datos_visualizacion_intra" class="tabla_datos_sub_campos" cellspacing=0 border="0" cellpadding=0 style="width:100%;">
+      <table id="tabla_datos_visualizacion_intra" class="bordered-table zebra-striped" cellspacing=0 border="0" cellpadding=0 style="width:100%;">
             <thead>
                 <tr class="titulo_tabla_resultado">
                     <td>[% "Campo Destino" | i18n %]</td>
