--- a/intranet/htdocs/intranet-tmpl/form_reporte_gen.tmpl
+++ b/intranet/htdocs/intranet-tmpl/form_reporte_gen.tmpl
@@ -1,5 +1,6 @@
 [% INCLUDE 'intranet-top.inc' %] 
 [% INCLUDE 'BootstrapToolkit.inc' %]
+<script src="/includes/bootstrap/js/bootstrap-modal.js"></script>
 
 [% USE HTML %]
 
