--- a/intranet/htdocs/intranet-tmpl/herramientas/importacion/add_campo_esquema.tmpl
+++ b/intranet/htdocs/intranet-tmpl/herramientas/importacion/add_campo_esquema.tmpl
@@ -15,9 +15,10 @@
             </li>
             <li class="sub_item">
                 <label for="subcampo">[% 'Subcampo' | i18n %]:</label>
-                <select name="subcampo" id="subcampo" onChange="eleccionSubCampo()">
+                <select name="subcampo" id="subcampo" onChange="eleccionSubCampoEsquema()">
                         <option value="-1">[% 'Seleccionar SubCampo' | i18n %]</option>
                     </select>
+                   <strong><span id="liblibrarian"></span></strong>
             </li>
             <li class="sub_item" id="li_separador">
                 <label for="separador">[% 'Separador' | i18n %]:</label> 
